// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a dark button 1`] = `
<button
  className="css-1lnopfn"
  onClick={[Function]}
  type="button"
>
  Foo
</button>
`;

exports[`Button should render a light button 1`] = `
<button
  className="css-1jabc46"
  onClick={[Function]}
  type="button"
>
  Foo
</button>
`;
